deploy-istio/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollout-example
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: my-app
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: canary-svc
# spec:
#   ports:
#   - port: 80
#     targetPort: http
#     protocol: TCP
#     name: http
#   selector:
#     app: my-app
#     # This selector will be updated with the pod-template-hash of the canary ReplicaSet. e.g.:
#     # rollouts-pod-template-hash: 7bf84f9696
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: stable-svc
# spec:
#   ports:
#   - port: 80
#     targetPort: http
#     protocol: TCP
#     name: http
#   selector:
#     app: my-app
#     # This selector will be updated with the pod-template-hash of the stable ReplicaSet. e.g.:
#     # rollouts-pod-template-hash: 123746c88d
